<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.thaislins.filmguide.modules.home.viewmodel.HomeViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                tools:context=".modules.home.view.HomeFragment">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.rd.PageIndicatorView
                    android:id="@+id/piv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginSmall"
                    app:layout_constraintBottom_toBottomOf="@id/pager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:piv_animationType="scale"
                    app:piv_count="5"
                    app:piv_interactiveAnimation="true"
                    app:piv_selectedColor="@android:color/white"
                    app:piv_unselectedColor="@android:color/darker_gray"
                    app:piv_viewPager="@id/pager" />

                <Button
                    android:id="@+id/btnPopularFilms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginSmall"
                    android:layout_marginTop="@dimen/marginLarge"
                    android:layout_marginEnd="@dimen/marginSmall"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:text="@string/home_fragment_popular_movies"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/piv" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopularFilms"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:orientation="horizontal"
                    app:items="@{viewModel.popularFilms}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnPopularFilms"
                    tools:listitem="@layout/item_film" />

                <Button
                    android:id="@+id/btnTopRated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginSmall"
                    android:layout_marginTop="@dimen/marginLarge"
                    android:layout_marginEnd="@dimen/marginSmall"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:text="@string/home_fragment_top_rated"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/rvPopularFilms" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopRated"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:orientation="horizontal"
                    app:items="@{viewModel.topRated}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnTopRated"
                    tools:listitem="@layout/item_film" />

                <Button
                    android:id="@+id/btnNowPlaying"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginSmall"
                    android:layout_marginTop="@dimen/marginMedium"
                    android:layout_marginEnd="@dimen/marginSmall"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:text="@string/home_fragment_now_playing"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/rvTopRated" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNowPlaying"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:orientation="horizontal"
                    app:items="@{viewModel.nowPlaying}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnNowPlaying"
                    tools:listitem="@layout/item_film" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>