<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.thaislins.filmguide.modules.details.viewmodel.DetailsViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.details.view.DetailsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:elevation="4dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:id="@+id/ivMoviePoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/marginMedium"
                    app:elevation="6dp"
                    app:layout_anchor="@id/scrolling_container"
                    app:layout_anchorGravity="top|end"
                    app:pressedTranslationZ="12dp"
                    app:rippleColor="@android:color/white" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrolling_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@{viewModel.title}"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/movie_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@{viewModel.year}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/details_fragment_summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-light"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@{viewModel.description}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/details_fragment_trailers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/details_fragment_similar_movies"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@android:color/white" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSimilarMovies"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="horizontal"
                    app:items="@{viewModel.similarFilms}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnPopularFilms"
                    tools:listitem="@layout/item_film" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>